move into a more restful endpoints patterns
